[package]
name = "genshin"
version = "0.1.0"
authors = ["Paul COMTE <paul.codepro@gmail.com>"]
repository = "https://github.com/RqndomHax/genshin"
description = "A scrapper for the https://genshin.gg database."
readme = "README.md"
license = "AGPL-3.0-or-later"
include = [ "src/**", "README.md" ]
keywords = [ "genshin", "scrapper", "api", "database", "genshin impact" ]
categories = [ "accessibility", "web-programming::http-client" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = {version = "1.0.145", features = ["derive"] }
